test/lit/tile_fusion/fusion_region_verify_missing_yield.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// Guards fusion_region verifier diagnostics when the body does not terminate
// with pto.yield.
//
// RUN: not ptoas --pto-level=level3 --emit-pto-ir %s 2>&1 | FileCheck %s

module {
  func.func @fusion_region_missing_yield_invalid() {
    %0 = pto.fusion_region {
      %c0 = arith.constant 0 : index
    } : index
    return
  }
}

// CHECK: error: 'pto.fusion_region' op expects body to terminate with pto.yield
